# lstack-client

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
docs/: ARCHITECTURE.md
packaging/: info.txt  make-appimage.sh
src/: main.cpp
ui/: Main.qml
ui/components/: StatusBar.qml  TopBar.qml
